--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
   <title>Sibling Olympics 2024</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="#">
+  <div id="title-bar">
+    <h1>Sibling Olympics 2024</h1>
+  </div>
 </head>
 
 <body>
-  <div class="title-bar">
-    <h1>Sibling Olympics 2024</h1>
+  <div id="nav-panel">
+    <!-- Event labels will be populated here (desktop) -->
   </div>
-  <div class="nav-panel" id="navbar">
-    <!-- Event labels will be populated here -->
-  </div>
-  <div class="arena-container">
+  <div id="arena-container">
+    <select id="nav-selector">
+      <!-- Event labels will be populated here (mobile) -->
+    </select>
     <div id="event-title">
       <!-- Event title will be populated here -->
     </div>
-    <div class="arena" id="arena">
+    <div id="arena">
       <!-- Arena will be populated here -->
     </div>
-    <div class="lap-marker" id="lap-marker">
+    <div id="lap-marker">
       <!-- Lap marker will be populated here -->
     </div>
   </div>
