Functionality test for mobile select

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
   </div>
   <div id="arena-container">
     <div id="dropdown" class="dropdown">
-      <button class="dropdown-btn"></button>
-      <div id="dropdown-menu" class="dropdown-menu">
+      <select id="dropdown-menu">
         <!-- Event labels will be populated here (mobile) -->
-      </div>
+      </select>
     </div>
     <div id="event-title">
       <!-- Event title will be populated here -->
